Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130080

"SourceProxy is not a type" when Qt is build statically

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.7.3, 6.8.0
    • None
    • macOS, Windows
    • 4cfac3fa6 (dev), c56a345f6 (6.8)

      When building Qt 6.7.3 and above statically, the SourceProxy is not found, making unavailable any Qt5 Effect.

      11:18:10: Starting /tmp/test-qt5-effect/build/Qt_6_7_3_for_macOS_static-Debug/test-qt5-effect.app/Contents/MacOS/test-qt5-effect...

      QML debugging is enabled. Only use this in a safe environment.

      Missing QML.Element class info for QGfxSourceProxy

      QQmlApplicationEngine failed to load component

      qrc:/main.qml:22:5: Type FastBlur unavailable

      qrc:/qt-project.org/imports/Qt5Compat/GraphicalEffects/FastBlur.qml:121:5: SourceProxy is not a type

        For Gerrit Dashboard: QTBUG-130080
        # Subject Branch Project Status CR V

            alexandru.croitor Alexandru Croitor
            sinosoidal Nuno Santos
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes